# simple-blog

./: Cargo.toml  README.md  docker-compose.yaml
database-scripts/: 02-indices.sql  tables.sql
frontend/: Dockerfile  angular.json  nginx.conf  package-lock.json
frontend/src/: styles.scss
frontend/src/app/: app.component.ts  app.routes.ts
frontend/src/app/feed/: feed.component.html  feed.component.scss  feed.component.ts
frontend/src/app/feed/feed-blogpost/: feed-blogpost.component.html  feed-blogpost.component.scss  feed-blogpost.component.spec.ts  feed-blogpost.component.ts
frontend/src/app/header/: header.component.html  header.component.scss
frontend/src/app/home/: home.component.html  home.component.ts
frontend/src/app/models/: blogpost.model.ts  create-blogpost-dto.model.ts  feed-dto.model.ts
frontend/src/app/new-post/: new-post.component.html  new-post.component.scss  new-post.component.ts
frontend/src/app/services/: blogpost.service.ts  image.service.ts
server/: Cargo.toml  Dockerfile
server/src/: db.rs  main.rs
server/src/handlers/: blogpost_handler.rs  blogpost_handler_tests.rs  image_handler.rs  image_handler_tests.rs  mod.rs
server/src/models/: blogpost.rs  dto.rs  image.rs  mod.rs
server/src/schema/: blogpost.rs  image.rs  mod.rs
server/src/service/: blogpost_service.rs  image_service.rs  mod.rs
src/: main.rs
src/models/: mod.rs
src/schema/: mod.rs
