[package]
name = "simple-blog"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.9.0"
anyhow = "1.0.89"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.4", features = ["r2d2", "postgres", "chrono"] }
env_logger = "0.11.5"
futures-util = "0.3.30"
log = "0.4.22"
r2d2 = "0.8.10"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["fs"] }
tokio-util = "0.7.12"
uuid = { version = "1.10.0", features = ["v4"] }
